--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,10 +4,10 @@
     <div class="navbar-inner">
       <div class="container">
         <ul class="nav">
-          <li><a href="/static_pages/help.html">Help</a></li>
-          <li><a href="/static_pages/home.html">Home</a></li>
-          <li><a href="/static_pages/about.html">About Us</a></li>
-          <li><a href="/static_pages/contact.html">Contact</a></li>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Help", help_path %></li>
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
         </ul>
       </div>
     </div>
