--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,8 @@
     <div class="container">
       <%= yield %>
     </div>
+    <div class="container">
+      <%= render('layouts/footer') %>
+    </div>
   </body>
 </html>
