--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,14 @@
       <%= render('layouts/header') %>
     </div>
     <div class="container">
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
       <%= yield %>
     </div>
     <div class="container">
       <%= render('layouts/footer') %>
     </div>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
