--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,19 @@
 <%= provide(:title, @user.name) %>
-<h1>
-  <%= gravatar_for @user %>
-  <%= @user.email %>
+<div class="row">
+  <aside class="span4">
+    <section>
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.email %>
+      </h1>
+    </section>
+    <section>
+      <%= render 'shared/stats' %>
+    </section>
+  </aside>
 
   <div class="span8">
+    <%= render 'follow' if signed_in? %>
     <% if @user.microposts.any? %>
       <h3>Microposts (<%= @user.microposts.count %>)</h3> 
       <ol class="microposts">
@@ -12,4 +22,4 @@
       <%= will_paginate @microposts %>
     <% end %>
   </div>
-</h1>
+</div>
